<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>
	<modules>
		<module>conjurer-shell</module>
		<module>conjurer-common</module>
		<module>conjurer-engine</module>
	</modules>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>tao.dong</groupId>
	<artifactId>data-conjurer</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>data-conjurer</name>
	<description>Data Conjurer</description>
	<properties>
		<java.version>21</java.version>
		<maven.compiler.release>21</maven.compiler.release>
		<picocli.version>4.7.5</picocli.version>
		<jackson.version>2.16.0</jackson.version>
		<lombok.version>1.18.30</lombok.version>
		<commons.text.version>1.10.0</commons.text.version>
		<commons.collections.version>4.4</commons.collections.version>
		<unified.el.version>5.0.0</unified.el.version>
		<jgrapht.version>1.5.2</jgrapht.version>
		<java.faker.version>1.0.2</java.faker.version>
		<snakeyaml.version>2.2</snakeyaml.version>
		<evalex.version>3.1.0</evalex.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.fasterxml.jackson.dataformat</groupId>
				<artifactId>jackson-dataformat-yaml</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>info.picocli</groupId>
				<artifactId>picocli-spring-boot-starter</artifactId>
				<version>${picocli.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>${commons.text.version}</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish.expressly</groupId>
				<artifactId>expressly</artifactId>
				<version>${unified.el.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>${commons.collections.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jgrapht</groupId>
				<artifactId>jgrapht-core</artifactId>
				<version>${jgrapht.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.javafaker</groupId>
				<artifactId>javafaker</artifactId>
				<version>${java.faker.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.yaml</groupId>
						<artifactId>snakeyaml</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<!-- Replace vulnerable older version of snakeyaml used by javafaker -->
			<dependency>
				<groupId>org.yaml</groupId>
				<artifactId>snakeyaml</artifactId>
				<version>${snakeyaml.version}</version>
			</dependency>
			<dependency>
				<groupId>com.ezylang</groupId>
				<artifactId>EvalEx</artifactId>
				<version>${evalex.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<finalName>data-conjurer</finalName>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<configuration>
						<image>
							<builder>paketobuildpacks/builder-jammy-base:latest</builder>
						</image>
						<mainClass>tao.dong.dataconjurer.shell.DataConjurerApplication</mainClass>
						<excludes>
							<exclude>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
							</exclude>
						</excludes>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
